💄 fix alignment and bg

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,11 +1,10 @@
 @import (reference) "variables";
 
 html, body {
-    height: 100%;
-    background-position: center center;
-    background-repeat: no-repeat;
+    height: 100vh;
+    overflow: auto;
     background-size: cover;
-    //background-color: #a8a8a8;
+    background: #20201f no-repeat center center;
 }
 
 body {
