--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -53,7 +53,7 @@
     padding: 10px 10px 20px 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    //justify-content: space-between;
 
     > li {
         text-align: center;
@@ -61,7 +61,7 @@
         display: inline-block;
         padding: 5px;
         height: 87px;
-        width: 100px;
+        width: 110px;
         white-space: nowrap;
         overflow: hidden;
 
