--- a/src/less/tabs.less
+++ b/src/less/tabs.less
@@ -10,6 +10,10 @@
     border-bottom: @size solid rgba(255, 255, 255, @alpha);
 }
 
+#tabs {
+    text-align: left;
+}
+
 .uk-tab {
     background: @global-bg;
     border-radius: @global-card-radius;
